# Everest

./: .env.example  .gitignore  .gitmodules  README.md
.assets/: Base.sql  Book.md  Deploy.md  Promotion.md  cloud-init.yml  init.sql  msdbd.sql  msdgl.sql  msdwc.sql
.assets/.legacy/: EC2.sh
.assets/Buildy/: bukkit.yml  server.properties
.assets/SQL/: msdgl.sql  msdwc.sql
.assets/servers/: server.json  update.json
.assets/sqls/: msdgl.sql
.data/: Base.sql
.repo/: Base.sql
.repo/docs/: Book.md  Promotion.md
.termux/: .env  optimizer.sh
.termux/boot/: init-termux.sh  initializer.sh
.termux/utils/: Setup.md  install.sh
config/: instances.json  server.json  update.json
docs/: Deploy.md  Intro.md  architecture.md  configuration.md  deployment.md  plugin-management.md  scripts.md
docs/SQLs/: 01-create-user.sql  02-create-database.sql  03-create-table.sql  04-insert-luckperms-data.sql  05-insert-tab-group-data.sql  Base.sql
instances/wildy/: spigot.yml
scripts/: everest  launcher  updater
scripts/core/: library
scripts/database/: 01-create-user.sql  03-create-table.sql  04-insert-luckperms-data.sql  05-insert-tab-group-data.sql
scripts/modules/: library
scripts/update/: directory.sh  download.sh  get-engine.sh  get-plugin.sh  link-common.sh  link-library.sh  link-plugin.sh  link-plugins.sh
scripts/utils/: get-engine.sh  get-plugin.sh  install.sh  link-data.sh  link-library.sh  link-plugin.sh
servers/buildy/: bukkit.yml  commands.yml  server.properties  spigot.yml  start.sh
servers/proxy/: .gitignore  restart.sh  start.sh  velocity.toml
servers/sky/: bukkit.yml  (+3 more)
services/: Cargo.toml
services/src/: config.rs  main.rs
services/src/modules/: mod.rs
services/src/modules/getter/: mod.rs
services/src/modules/getter/strategy/: direct.rs  enginehub.rs  github.rs  jenkins.rs  zrips.rs
services/src/modules/launcher/: mod.rs
services/src/modules/updater/: mod.rs
services/src/modules/updater/getter/: mod.rs
services/src/modules/updater/getter/strategy/: direct.rs  enginehub.rs  github.rs  jenkins.rs  mod.rs  zrips.rs
services/src/utils/: http.rs  mod.rs
(+382 files in other folders)
